backpack PL and money PL

--- a/pl/_posts/2024-12-01-money.md
+++ b/pl/_posts/2024-12-01-money.md
@@ -22,7 +22,7 @@ W zeszłym miesiącu odbyłem ciekawą rozmowę z innym przedsiębiorcą, który
 
 Prawie nikt nie pracuje za darmo. Ludzie w Polsce dostają zwykle wynagrodzenie za swoją pracę. Może to być stała pensja, suma wszystkich zleceń czy kontraktów lub inny rodzaj rekompensaty. Tak czy inaczej, zarabiasz miesięczną pensję, a gdy podzielisz ją przez liczbę dni w miesiącu (bez weekendów), masz 21 dni roboczych. Pomnóż to przez 8 godzin dziennie, a otrzymasz 168 godzin pracy miesięcznie.
 
-[Minimalna płaca krajowa w 2024 roku](https://www.gov.pl/web/premier/min-stawka-godzinowa-2024) w Polsce wynosi 28 zł. 
+Minimalna płaca krajowa w 2024 roku w Polsce wynosi 28 zł. 
 
 28.10 zł za godzinę brutto.
 
@@ -38,7 +38,7 @@ A co jeśli możesz zaoszczędzić 1 godzinę tygodniowo? To co najmniej 112 zł
 
 I to są prawdziwe pieniądze. Pracując wydajniej, możesz obsłużyć więcej klientów, możesz wyprodukować więcej towarów lub wykonać coś o większej wartości, ponieważ masz dodatkowy czas.
 
-## A co gry ty lub członkowie zespołu są wysoce wykwalifikowanymi specjalistami?
+## A co, gdy ty lub członkowie zespołu są wysoce wykwalifikowanymi specjalistami?
 
 Załóżmy teraz, że zarabiasz więcej niż minimalną krajową. Powiedzmy, że dochodzicie do progu średniej krajowej, która wg GUS w drugim kwartale 2024 wynosi w zaokrągleniu ok 50 zł brutto.
 
