--- a/en/_posts/2024-11-13-podcast-213.md
+++ b/en/_posts/2024-11-13-podcast-213.md
@@ -2,10 +2,11 @@
 tags: [podcast]
 img: "podcast-212.jpg"
 podcast: 1012329770
+redirect_from: /podcast-212/
 m: https://social.nozbe.com/@michael/113477776879788978
 ---
 
-# The Podcast 212 - Michael's Weekly Template
+# The Podcast 213 - Michael's Weekly Template
 
 Me and Radek are no longer recording the podcast together, but I decided to try this new AI tool from Google: [NotebookLM](/notebooklm) to generate a podcast conversation between two AI co-hosts about [my weekly template](/week/). It turns out the conversation blew my mind 🤯 and I decided to post it as a new episode:
 
