--- a/en/_posts/2024-12-18-podcast-216.md
+++ b/en/_posts/2024-12-18-podcast-216.md
@@ -15,7 +15,7 @@ This time the AI co-hosts are discussing [the recently-updated contents of my ba
 ## 🎙️ Listen to "Michael’s #BackpackOnly lifestyle"
 
 <audio controls>
-<source src="" type="audio/mpeg">
+<source src="https://media.transistor.fm/5dd54c19/3cd635a1.mp3" type="audio/mpeg">
 </audio>
 
 ## 📝 Show notes:
