nadgryzieni big update

--- a/pl/_posts/2024-03-13-nadgryzieni-464.md
+++ b/pl/_posts/2024-03-13-nadgryzieni-464.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "y7bjLhX5y_M"
+podcast: 354643597
 ---
 
-# Nadgryzieni 464: Polski deweloper vs Apple
+# Nadgryzieni #464: Polski deweloper vs Apple
 
 Od dyskusji na [Mastodonie](https://michael.gratis/ma) z kolegami z [iMagazine](/pl/imagazine/) doszło do zaproszenia do ich podcastu, w którym obszernie przedstawiłem mój punkt widzenia jako developera aplikacji [Nozbe][n], fana Apple, którego bardzo rozczarowuje postawa jego ulubionej firmy sadowniczej - wyszła super rozmowa - zapraszam (także na after-show!):
 
