--- a/pl/_posts/2024-04-24-nadgryzieni-470.md
+++ b/pl/_posts/2024-04-24-nadgryzieni-470.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "nShw_6lFPCA"
+podcast: 354643597
 ---
 
-# Współprowadzący w podkaście Nadgryzieni 470 o WWDC
+# Nadgryzieni #470: Współprowadzący w podkaście o WWDC 2024
 
 Chłopaki - Wojtek i Tomek - zaprosili mnie do współprowadzenia Nadgryzionych z nimi i co jakiś czas będę z nimi nagrywał. Gadało się świetnie bo o moich ulubionych tematach - technologii, gadżetach i oczywiście aplikacjach w kontekście konferencji Apple - WWDC w czerwcu.
  [Więcej informacji ℹ️][l]
