--- a/pl/_posts/2024-05-08-nadgryzieni-473.md
+++ b/pl/_posts/2024-05-08-nadgryzieni-473.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "MWslgBi83Co"
+podcast: 354643597
 ---
 
-# W Nadgryzionych 473 komentuję nowe iPady z konferencji Let Loose
+# Nadgryzieni #473: Komentujemy nowe iPady z konferencji Let Loose
 
 Zaraz po premierze nowych iPadów Air i Pro, gdzie obie rodziny są od teraz dostępne w rozmiarze 11- i 13-calowym, omawiamy wszystkie nowości, w tym nowego Pencil Pro i Apple M4 oraz zdradzamy co zamówiliśmy (lub nie). Zapraszam - 2 godziny analizy dla każdego geeka iPad-owego
  [Więcej informacji ℹ️][l] - a moje przemyślenia opublikowałem [tutaj po angielsku](/ipad24/)
