--- a/pl/_posts/2024-05-17-nadgryzieni-475.md
+++ b/pl/_posts/2024-05-17-nadgryzieni-475.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "LLGYA689Q2U"
+podcast: 354643597
 ---
 
-# W Nadgryzionych 475 o nowych iPadach Pro i Air 2024
+# Nadgryzieni #475: O nowych iPadach Pro i Air 2024
 
 Nowe iPady, szczególnie [iPady Pro](/ipad24pro) - jakie pierwsze wrażenia, jakie porównania ze starym i nowym. Którego iPada powinno się wybrać? Dlaczego mamy na ten temat różne zdania?
 
