--- a/pl/_posts/2024-05-31-nadgryzieni-477.md
+++ b/pl/_posts/2024-05-31-nadgryzieni-477.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "59OpZrAj6wg"
+podcast: 354643597
 ---
 
-# Nadgryzieni 477 - Czy Thomas istnieje?
+# Nadgryzieni #477: Czy Thomas istnieje?
 
 Thomas dzisiaj demonstruje swój głos wygenerowany w AI, przez co nie mamy już pewności, czy on naprawdę istnieje. A może to jakiś obcy człowiek podający się za niego? Niesamowite użycie AI, aby mówić lepiej po angielsku. Aż sam tego spróbuję.
 
