--- a/pl/_posts/2024-06-07-nadgryzieni-478.md
+++ b/pl/_posts/2024-06-07-nadgryzieni-478.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 cover: "nadgryzieni-478.jpg"
+podcast: 354643597
 ---
 
-# Nadgryzieni 478 - nowe iPady Pro M4
+# Nadgryzieni #478: - Nowe iPady Pro M4
 
 Rozmawiamy o iPadach. Potem kącik filmowy na który już się nie załapałem, bo musiałem uciekać. Nagranie jako [część live-streamu z zeszłego tygodnia](/pl/nadgryzieni-477). Rozmowa tylko o iPadach Pro - i o tym jaki zamówiłem i dlaczego jestem naiwny w mojej konfiguracji.
 
