--- a/pl/_posts/2024-06-12-nadgryzieni-479.md
+++ b/pl/_posts/2024-06-12-nadgryzieni-479.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "EzugOMqqpMU"
+podcast: 354643597
 ---
 
-# Nadgryzieni 479 - WWDC 2024
+# Nadgryzieni #479: WWDC 2024
 
 Razem z Thomasem i Wojtkiem dzisiaj podsumowujemy keynote otwierający WWDC 2024, omawiamy najważniejsze jego elementy oraz komentujemy nowości w iOS18 i wszystkich systemach pochodnych… oraz AI, czyli Apple Intelligence.
 
