--- a/pl/_posts/2024-06-21-nadgryzieni-481.md
+++ b/pl/_posts/2024-06-21-nadgryzieni-481.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "USIM3ql2Ukw"
+podcast: 354643597
 ---
 
-# Nadgryzieni 481 - mój M4 iPad Pro i wiele newsów
+# Nadgryzieni #481: Mój M4 iPad Pro i wiele newsów
 
 Długi odcinek. Ja byłem przez pierwszą, większą połowę (2.5h) i omawialiśmy to, czego nie powiedziano na WWDC 2024, były testy Ray-Banów od Mety i innych okularów, wrażeń z używania nowego iPada Pro M4, rozważań nad aparatami analogowymi, a do tego spory kącik filmowy.
  [Więcej informacji ℹ️][l]
