--- a/pl/_posts/2024-07-05-nadgryzieni-483.md
+++ b/pl/_posts/2024-07-05-nadgryzieni-483.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "t05jeZGSLMY"
+podcast: 354643597
 ---
 
-# Nadgryzieni 483 - Unia Europejska vs Apple oraz AI
+# Nadgryzieni #483: Unia Europejska vs Apple oraz AI
 
 AI - oraz jak sam zacząłem z nim eksperymentować, arogancja Big Tech w Unii Europejskiej - czy staniemy się technologicznym zaściankiem Europy? Poruszamy też kwestię dopłat do rowerów elektrycznych w Polsce, najnowsze newsy Apple’owe, a na koniec Thomas opowiada o dodatkach i akcesoriach do okularów AR, a Wojtek relacjonuje wrażenia z pierwszą jazdą VW ID Buzz GTX LWB, czyli z długim rozstawem osi. I czy ja bym go kupił? [Więcej informacji ℹ️][l]
 
