--- a/pl/_posts/2024-07-12-nadgryzieni-484.md
+++ b/pl/_posts/2024-07-12-nadgryzieni-484.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "Edxx4OJi6yQ"
+podcast: 354643597
 ---
 
-# Nadgryzieni 484 - jaki plecak wybrać i co to są pouch’e?
+# Nadgryzieni #484: Jaki plecak wybrać i co to są pouch’e?
 
 Dzisiaj trochę newsów (Windows Copilot+, roboty, i nie tylko) a potem rozmowa o plecakach, pouch’ach i innych gadżetów z Peak Design (nie sponsor!) - oraz dlaczego pomimo takiego wyboru Wojtek nie może nic wybrać. Dzisiaj byłem cały odcinek, zapraszam! [Więcej informacji ℹ️][l]
 
