--- a/pl/_posts/2024-09-06-nadgryzieni-492.md
+++ b/pl/_posts/2024-09-06-nadgryzieni-492.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "7xyOqxxVNRY"
+podcast: 354643597
 ---
 
-# Po wakacjach w Nadgryzionych 492 o nadchodzącym iPhone 16
+# Nadgryzieni #492: Powakacyjnie o nadchodzącym iPhone 16
 
 Krzysiek Kołacz był umówiony z Wojtkiem na to nagranie, więc też się dołączyłem i rozmawialiśmy nie tylko o iPhonie 16, który już w poniedziałek, ale także o tym jakie sposoby na zwiększanie produktywności mamy na naszych urządzeniach z nadgryzionym jabłuszkiem. Między innymi opowiadam o moim [Skrócie do przycisku Akcji](/akcja), który opisywałem w [felietonie do iMagazine](/pl/akcja/).
 
