--- a/pl/_posts/2024-11-08-nadgryzieni-502.md
+++ b/pl/_posts/2024-11-08-nadgryzieni-502.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "lcfjcygFb14"
+podcast: 354643597
 ---
 
-# Nadgryzieni 502 - więcej o najnowszych Makach z M4
+# Nadgryzieni #502: Więcej o najnowszych Makach z M4
 
 Dołączyłem znowu do podcastu chłopaków z [iMagazine](/pl/imagazine) i rozmawialiśmy o Makach z procesorami M4. Są super. I wcale się nie dziwię, bo mój [iPad Pro z M4](/ipadm4) też jest świetny. [Więcej informacji ℹ️][l]
 
