--- a/pl/_posts/2024-11-28-nadgryzieni-505.md
+++ b/pl/_posts/2024-11-28-nadgryzieni-505.md
@@ -1,9 +1,10 @@
 ---
 tags: [nadgryzieni,gosc]
 vid: "kj9KU_LRjSI"
+podcast: 354643597
 ---
 
-# Nadgryzieni 505 - o Black Friday i gadżetach i gamingu na Maku
+# Nadgryzieni #505: Black Friday i gadżety oraz gaming na Maku
 
 Dołączyłem znowu do Wojtka i Tomka, aby przegadać ciekawe promocje na Black Friday (w [Nozbe też mamy](https://nozbe.com/promo?c=michaelteam)), szczegółach mojego [plecaka](/backpack) i nie tylko. Zapraszam!
  [Więcej informacji ℹ️][l]
