--- a/pl/_posts/2024-12-13-nadgryzieni-507.md
+++ b/pl/_posts/2024-12-13-nadgryzieni-507.md
@@ -1,9 +1,10 @@
 ---
-tags: [nadgryzieni]
+tags: [nadgryzieni,gosc]
 vid: "28qiFagsYoU"
+podcast: 354643597
 ---
 
-# AI, VR i energetyki w Nadgryzionych 507
+# Nadgryzieni #507: AI, VR i energetyki
 
 Dołączyłem do chłopaków i tym razem gadaliśmy o AI i nie tylko. Zamówiłem Meta Headset VR, ale jeszcze się nie bawiłem. Oraz Thomas testował oryginalnego Red Bulla. No i kącik filmowy bardzo bogaty tym razem!
  [Więcej informacji ℹ️][l]
