--- a/pl/_posts/2024-12-20-nadgryzieni-508.md
+++ b/pl/_posts/2024-12-20-nadgryzieni-508.md
@@ -1,9 +1,10 @@
 ---
-tags: [nadgryzieni]
+tags: [nadgryzieni,gosc]
 vid: "6ThAnrJ0Kuo"
+podcast: 354643597
 ---
 
-# Nadgryzieni 508 Sztuka pracy zdalnej
+# Nadgryzieni #508: Sztuka pracy zdalnej
 
 Mój ulubiony temat - [praca zdalna](https://NoOffice.org/pl/) - rozmawiamy o tym z chłopakami - dla kogo praca zdalna, czy to jest przyszłość pracy? Dlaczego? Zapraszam.
  [Więcej informacji ℹ️][l]
