--- a/pl/_posts/2024-05-03-nadgryzieni-472.md
+++ b/pl/_posts/2024-05-03-nadgryzieni-472.md
@@ -4,7 +4,7 @@ vid: "aqvma7ajltQ"
 podcast: 354643597
 ---
 
-# Nadgryzieni #472: Tajwan
+# Nadgryzieni #472: Pik pik, pik pik, czyli podróżowanie po Tajwanie
 
 Dzisiaj byłem tylko na pierwszą godzinę, ale było intensywnie bo dzieliłem się moimi wrażeniami o [Tajwanie](/taiwan) i o tym, jakie na mnie zrobił wrażenie transport publiczny w tym kraju i jak korzystanie z niego to „pik, pik” i z głowy (stąd tytuł odcinka!)
  [Więcej informacji ℹ️][l]
