--- a/pl/_posts/2025-01-03-nadgryzieni-510.md
+++ b/pl/_posts/2025-01-03-nadgryzieni-510.md
@@ -20,7 +20,7 @@ Długie, prawie 4-godzinne nagranie podcastu, gdzie podsumowujemy rok 2024 i prz
 
 Nagrywałem go podczas urlopu, kiedy byłem w domu moich rodziców. Używałem MacBooka Air M1 mojej mamy i mikrofonu jaki tam sobie zostawiłem (i słuchawek mojej najmłodszej córki), oto jak ten setup wyglądał:
 
-![{{ page.title }}](/img/nagryzieni-510.jpg)
+![{{ page.title }}](/img/nadgryzieni-510.jpg)
 
 [Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/01/03/nadgryzieni-510-wielkie-podsumowanie-2024/)
 
