--- a/pl/_posts/2025-01-08-nadgryzieni-511.md
+++ b/pl/_posts/2025-01-08-nadgryzieni-511.md
@@ -20,7 +20,7 @@ Dzisiaj o CES i wybuchającej Tesli i nasze próby aby przy okazji nie gadać o 
 
 Tak wyglądał moment, kiedy nagle wszyscy nie mogliśmy ze śmiechu wytrzymać (około 27 minuty nagrania):
 
-![{{ page.title }}](/img/nagryzieni-511.jpg)
+![{{ page.title }}](/img/nadgryzieni-511.jpg)
 
 [Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/01/10/nadgryzieni-511-ces-2025-nvidia-5090-wybuchajacy-cybertruck-i-wiele-wiecej/)
 
