added shorts and updated shortcuts

--- a/en/_posts/2025-01-13-noofficefm-56.md
+++ b/en/_posts/2025-01-13-noofficefm-56.md
@@ -18,7 +18,9 @@ We’re back with a new episode of the podcast and we’re back with Magda and w
 <source src="https://media.transistor.fm/bfede74b/461ee527.mp3" type="audio/mpeg">
 </audio>
 
+## Trailer (Short)
 
+{% include videos.html id="3EZ3kJKDGpc" name="NY" %}
 
 [Full episode show notes at NOOFFICE.FM/56](https://nooffice.fm/56)
 
