--- a/pl/_posts/2025-01-13-niemabiura-67.md
+++ b/pl/_posts/2025-01-13-niemabiura-67.md
@@ -18,7 +18,9 @@ Wracamy z podcastem i Magdą oraz… z tematem postanowień noworocznych i omawi
 <source src="https://media.transistor.fm/bd8f9f2c/325d02d6.mp3" type="audio/mpeg">
 </audio>
 
+## Zwiastun odcinka:
 
+{% include videos.html id="qO8bL--zoyw" name="NY" %}
 
 [Notatki do odcinka na NIEMABIURA.PL/67](https://niemabiura.pl/67)
 
