--- a/pl/_posts/2025-02-28-nadgryzieni-519.md
+++ b/pl/_posts/2025-02-28-nadgryzieni-519.md
@@ -1,12 +1,12 @@
 ---
 tags: [nadgryzieni,gosc]
-vid: "Ai8q1gBs5XQ"
+vid: "PTG8sCcenp4"
 podcast: 354643597
 ---
 
-# Nadgryzieni #517: Projekt Home Assistant i HomeKit
+# Nadgryzieni #519: Thomas kupił Maca Mini M4 a ja opowiadam o Prompterze
 
-Pierwszy odcinek Nadgryzionych nagrany za pomocą mojego nowego komputera biurowego, Maca Mini (nie bez problemów technicznych), potem nowinki AI oraz Home Assistant i między innymi Skrót [przycisku Akcji](/pl/akcja) i potem kącik filmowy.
+Tym razem Thomas kupił podobnie jak ja Maca Mini i rozmawiamy o nim i o różnych hubach i dockach do niego. Przy okazji ja daję swoje pierwsze wrażenia odnośnie Promptera. I chwalę się moim skrótem do [YouTube](/yt)
 
 {% include video.html id=page.vid %}
 
@@ -15,12 +15,12 @@ Pierwszy odcinek Nadgryzionych nagrany za pomocą mojego nowego komputera biurow
 ## Posłuchaj podcast w wersji audio:
 
 <audio controls>
-<source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-517.mp3" type="audio/mpeg">
+<source src="https://media.blubrry.com/nadgryzieni/imagazine.stronazen.pl/nadgryzieni/Nadgryzieni-Odcinek-519.mp3" type="audio/mpeg">
 </audio>
 
 
 
-[Notatki do odcinka na stronie iMagazine]()
+[Notatki do odcinka na stronie iMagazine](https://imagazine.pl/2025/02/28/519-thomas-kupil-maca-mini-m4-elektryki-zima-i-wiecej-o-advanced-data-protection-nadgryzieni/)
 
 ## 🍎 Subskrybuj "Nadgryzionych"
 
