--- a/en/_posts/2025-03-10-office25.md
+++ b/en/_posts/2025-03-10-office25.md
@@ -1,10 +1,10 @@
 ---
-tags: [officeoffice,featured]
+tags: [office,featured]
 cover: "office25.jpg"
 social: "office25.jpg"
 ---
 
-# Home Office 2025 with Mac Mini, Prompter and re-arranged desk
+# Home Office 2025 upgraded with Mac Mini, Prompter and more!
 
 After a longer stint with my home office (only with minor changes since [2022](/office22)) it was time for some major re-modeling. I started with moving furniture around but then I upgraded basically everything: cables, Mac, teleprompter and much more. So stay tuned for my best home office yet!
 
@@ -25,7 +25,7 @@ By moving the desk to the back I feel like I have more space in front of me when
 
 The sofa in my home office sometimes is being used by guests who sleep here, so this way when the sofa is converted to a bed, my home office space is basically unaffected and I can keep recording podcasts or videos.
 
-## Mac Mini - the new soul of my home office
+## M4 Mac Mini - the new soul of my home office
 
 Now that I'm rocking the [M4 iPad Pro](/ipadm4) I decided to go all-in on M4 and bought the almost-base model of **M4 Mac Mini** as my new Mac. I've upgraded it with 10G Ethernet and 512GB storage ($900). I love this mini computer and I love how it's so cute and so small that it looks like a stand for my Mandalorian figurine:
 
@@ -148,10 +148,17 @@ This is yet another pretty big step in my home office evolution:
 
 I hope this new home office inspires you to improve yours. If you have any questions, let me know [on social media](/contact).
 
+## P.S. Additional space for Legos!
 
+In the corridor-room adjecent to my home office I've built a special place for my [lego cars](/lego) collection and it looks glorious and is back lit with LED lights:
 
+![{{ page.title }} lego](/img/office25-lego.jpg)
 
+Above the legos I have a [Brother Wireless Color laser printer](https://amzn.to/4hlVaYw). I prefer to have a printer in the corridor since it makes noise when it prints and this way anyone can print anything from their phone on tablet and pick up the print outs wihtout disturbing me in the home office.
 
+## P.P.S. Cat 6a Ethernet in my home office
+
+One last additional improvement is that I've re-cabled my home office with [Cat 6a Ethernet cable](https://en.wikipedia.org/wiki/Category_6_cable#Category_6A) because I've got 10Gigabit port on my [Mac Mini](/ssd) and [Eero 6+ mesh](https://amzn.to/43A5Xej) which supports already 2.5Gigabit ethernet. This way I already have a cable for the future. I'll be slowly re-cabling my entire house in the future.
 
 [n]: https://michael.gratis/nozbe
 [np]: https://michael.gratis/nozbepersonal
