small improvements office 25

--- a/en/_posts/2025-03-10-office25.md
+++ b/en/_posts/2025-03-10-office25.md
@@ -80,8 +80,8 @@ Now I feel like this Prompter is my "phone booth" as all my meetings take place 
 
 Now my desk is clearly divided in two sections:
 
-* **iPad section** on the left below the Prompter is where I type on my [M4 iPad Pro](/ipadm4)
-* **Mac section** on the right where the [keyboard and trackpad](/ergo/) are and where my old trusty [4K LG 27UK850-W screen](https://www.amazon.com/dp/B078GVTD9N/?tag=sliwinski-20) is installed. Even though it's a 4K screen I have it simulate as 5K at 2560*1440 resolution in retina mode (go to Settings > Displays > More Space).
+- **iPad section** on the left below the Prompter is where I type on [M4 iPad Pro](/ipadm4)
+- **Mac section** on the right where the [keyboard and trackpad](/ergo/) are and where my old trusty [4K LG 27UK850-W screen](https://www.amazon.com/dp/B078GVTD9N/?tag=sliwinski-20) is installed. Even though it's a 4K screen I have it simulate as 5K at 2560x1440 resolution in retina mode (go to *Settings > Displays > More Space*).
 
 ![{{ page.title }} desk](/img/office25-desk.jpg)
 
@@ -93,7 +93,7 @@ Below the desk I have cables very neatly organized (red zone) and I've set up li
 
 ## New/old iPad corner - still works perfectly!
 
-I still decided to keep my [iPad Corner](/ipad-corner) with my very old [Thunderbolt Display](/display) for when I want to work in a focused way on the [iPad](/ipadonly). Now that the external monitor support on the iPad has been fixed, I can take advantage of the entire screen easily.
+I still decided to keep my [iPad Corner](/ipad-corner) with my very old [Thunderbolt Display](/display) for when I want to work in a focused way on the [iPad](/ipadonly). Now that the external monitor support on the iPad is fixed, I can take advantage of the entire screen easily.
 
 ![{{ page.title }} ipad](/img/office25-ipad.jpg)
 
@@ -101,7 +101,7 @@ At the back of the iPad corner I used IKEA Kallax furniture with drawers for the
 
 ![{{ page.title }} kallax](/img/office25-kallax.jpg)
 
-Now this small 4-section Kallax is divided like this:
+This small 4-section Kallax is divided like this:
 
 1. Top left - shredded and just paper bin
 2. Bottom left - other trash
@@ -112,15 +112,15 @@ Everything handy!
 
 ## Old iPad Pro and ancient iPad 1 at the very back!
 
-I've installed my trusty old [10" iPad Pro](/babyipad) right behind me. I've set it up with a different iCloud account which can access my "Home" so I can manage lights and other accessories with it. Next to it there's still-working my [first ever iPad](/i-have-to-admit-this-5-reasons-why-ipad-is-th/). I can't believe this thing is 15 years old and still kicking!
+I've installed my trusty old [10" iPad Pro](/babyipad) right behind me. I've set it up with a different iCloud account which can access my "Home" so I can manage lights and other accessories with it. Next to it there's still-working my [first ever iPad](/i-have-to-admit-this-5-reasons-why-ipad-is-th/) from 2010!
 
 ![{{ page.title }} ipads](/img/office25-ipads.jpg)
 
 Right above the iPads there is a big photo-like Bluetooth speaker and the first prominent article about [Nozbe](/nozbe) from 2007 by [Marc Orchant](/tribute-to-marc-orchant/). Here's the [Wayback link to the article from February 12, 2007](https://web.archive.org/web/20070212021434/http://blogs.zdnet.com/Orchant/?p=349).
 
-To the side there's a big drawer for documents that I shouldn't shred. I still have my whiteboard which I don't use as often as I'd like, but it's there if I need to brainstorm on some ideas. 
+To the side there's a big drawer for documents that I must keep. I still have my whiteboard which I don't use as often as I'd like, but it's there if I need to brainstorm on some ideas. 
 
-## Green screen still there as I need it from time to time
+## Green screen still there…
 
 I've moved the green screen to the back and now it's ready when I need it for some podcast recordings or conference speeches. Or [Nozbe videos](https://nozbe.com/guide/?c=michaelteam).
 
@@ -128,9 +128,9 @@ I've moved the green screen to the back and now it's ready when I need it for so
 
 I've added one extra bulb on top of the green screen so that the screen itself is lit more evenly.
 
-## Recap - big updates in my Home Office 2025!
+## Big upgrades in my Home Office 2025!
 
-This is yet another pretty big step in my home office evolution:
+To recap, this is yet another big step in my home office evolution:
 
 ![{{ page.title }} recap](/img/office25-recap.jpg)
 
