--- a/en/_posts/2025-02-24-noofficefm-70.md
+++ b/en/_posts/2025-02-24-noofficefm-70.md
@@ -30,6 +30,10 @@ Why companies ditch hybrid work? Are there any data-based reasons to back up thi
 🟠 [Overcast](https://overcast.fm/itunes1527466890/no-office)\\
 🔴 [YouTube on Nozbe channel](https://youtube.com/NozbeCom)
 
+## Trailer of the episode:
+
+{% include videos.html id="luOrsrbOHig" name="Remote Work Banned" %}
+
 <!--podcast: 1527466890-->
 
 [n]: https://michael.gratis/nozbe
