--- a/en/_posts/2025-02-01-now250201.md
+++ b/en/_posts/2025-02-01-now250201.md
@@ -1,6 +1,6 @@
 ---
 tags: [now]
-cover: "now250201.jpg"
+img: "now250201.jpg"
 ---
 
 # On February 1 `25 I am…
@@ -9,7 +9,7 @@ cover: "now250201.jpg"
 
 <!--More-->
 
-![{{ page.title }}](/img/{{ page.cover }})
+![{{ page.title }}](/img/{{ page.img }})
 
 > Note: this is my ["now page"](/now) where I share what I'm up to now.
 
