--- a/pl/_posts/2025-03-14-nadgryzieni-522.md
+++ b/pl/_posts/2025-03-14-nadgryzieni-522.md
@@ -6,7 +6,7 @@ podcast: 354643597
 
 # Nadgryzieni #522: Jabłko gnije od wnętrza
 
-Dzisiejszy odcinek podcastu poświęcony jest głównie [mojemu biuru domowemu](/office25) i temu, że firma Apple naprawdę jest w czarnej d… na własne życzenie z powodu głupiej Siri, opóźnień z AI i generalnie obiecankami-cacankami, których do tej pory nie robiła.
+Dzisiejszy odcinek podcastu poświęcony jest głównie [mojemu biurowi domowemu](/office25) i temu, że firma Apple naprawdę jest w czarnej d… na własne życzenie z powodu głupiej Siri, opóźnień z AI i generalnie obiecankami-cacankami, których do tej pory nie robiła.
 
 {% include video.html id=page.vid %}
 
