no office threads

--- a/en/_posts/2025-03-17-noofficefm-71.md
+++ b/en/_posts/2025-03-17-noofficefm-71.md
@@ -2,6 +2,7 @@
 tags: [noofficefm,video]
 vid: "EVmdWGUodjQ"
 podcast: 1527466890
+m: https://social.nozbe.com/@michael/114179903415073335
 ---
 
 # No Office FM #71: Remote Work Hacks
@@ -18,7 +19,9 @@ We discuss a series of hacks that you can use to make your [#NoOffice](/nooffice
 <source src="https://media.transistor.fm/898de5f2/35656228.mp3" type="audio/mpeg">
 </audio>
 
+## Trailer:
 
+{% include videos.html id="hDNVkSji_mI" name="Remote Work" %}
 
 [Full episode show notes at NOOFFICE.FM/71](https://nooffice.fm/71)
 
