--- a/pl/_posts/2025-03-17-niemabiura-71.md
+++ b/pl/_posts/2025-03-17-niemabiura-71.md
@@ -18,7 +18,9 @@ Dzisiaj z Magdą omawiamy sposoby na radzenie sobie z minusami pracy zdalnej, ta
 <source src="https://media.transistor.fm/7e1e713a/b652bd35.mp3" type="audio/mpeg">
 </audio>
 
+## Zwiastun:
 
+{% include videos.html id="1jGvInS3ZPc" name="Praca zdalna" %}
 
 [Notatki do odcinka na NIEMABIURA.PL/71](https://niemabiura.pl/71)
 
