roller for friday

--- a/en/_posts/2025-03-12-zip.md
+++ b/en/_posts/2025-03-12-zip.md
@@ -1,5 +1,5 @@
 ---
-tags: [travel,gadgets]
+tags: [gadgets,travel]
 cover: "zip.jpg"
 social: "zip.jpg"
 m: https://social.nozbe.com/@michael/114156828480649759
@@ -7,7 +7,7 @@ m: https://social.nozbe.com/@michael/114156828480649759
 
 # Is Peak Design Everyday Zip 15L an ideal small backpack for airplanes?
 
-In Europe, most airlines, especially Ryanair, Easyjet and Wizzair, let you have a **free small bag** which you can put under a seat. The dimensions are more-less 40cm of height (16 inches), 25-30cm of width (10-12 inches) and 20cm of bulk (8 inches). Most of my [backpacks](backpack/#other-backpacks-ive-used-and-tested) are between 20-26L and they are just too big. Normally I'd get away with it, but recently the airlines started paying more attention to these bags' sizes. So I checked if my favorite bag/pouches company Peak Design had anything that would work and I think I found it. It's [Everyday Backpack Zip 15L](https://www.peakdesign.com/products/everyday-backpack-zip?Size=15L).
+In Europe, most airlines, especially Ryanair, Easyjet and Wizzair, let you have a **free small bag** which you can put under a seat. The dimensions are more-less 40cm of height (16 inches), 25-30cm of width (10-12 inches) and 20cm of bulk (8 inches). Most of my [backpacks](backpack/#other-backpacks-ive-used-and-tested) are between 20-26L and they are just too big. Normally I'd get away with it, but recently the airlines started paying more attention to these bags' sizes. So I checked if my favorite bag/pouches company Peak Design had anything that would work and I think I found it. It's [Everyday Backpack Zip 15L](https://www.peakdesign.com/products/everyday-backpack-zip?Size=15L) ([Amazon link](https://amzn.to/41EWMqC)).
 
 <!--More-->
 
@@ -32,11 +32,11 @@ It also features a separate laptop compartment which can be accessed from the ou
 
 I love pouches from Peak Design. I have several of them:
 
-- 1 [Tech Pouch](https://www.peakdesign.com/products/tech-pouch?Size=Regular&Color=Midnight) where I have [all my go-to accessories](/backpack/#whats-in-my-tech-pouch).
-- 2 [Small Packing Cubes](https://www.peakdesign.com/products/packing-cube?Size=Small) I use for my clothes and I usually fit all of them for a week in these two.
-- 1 [Ultralight Mesh Packing Cube XXS](https://www.peakdesign.com/products/ultralight-packing-cube?Size=XXS&Color=Eclipse&Material=Mesh) I use for my toiletries.
-- 1 [Ultralight Fabric Packing Cube XS](https://www.peakdesign.com/products/ultralight-packing-cube?Size=XS&Color=Eclipse&Material=Fabric) I keep in case I need to pack some additional things.
-- 1 [Packable Tote](https://www.peakdesign.com/products/packable-tote?Color=Raw) I use for going shopping.
+- 1 [Tech Pouch](https://www.peakdesign.com/products/tech-pouch?Size=Regular&Color=Midnight) where I have [all my go-to accessories](/backpack/#whats-in-my-tech-pouch). ([Amazon link](https://amzn.to/4ikazdl))
+- 2 [Small Packing Cubes](https://www.peakdesign.com/products/packing-cube?Size=Small) I use for my clothes and I usually fit all of them for a week in these two. ([Amazon link](https://amzn.to/4kyJl4h))
+- 1 [Ultralight Mesh Packing Cube XXS](https://www.peakdesign.com/products/ultralight-packing-cube?Size=XXS&Color=Eclipse&Material=Mesh) I use for my toiletries. ([Amazon link](https://amzn.to/4kHqzYs))
+- 1 [Ultralight Fabric Packing Cube XS](https://www.peakdesign.com/products/ultralight-packing-cube?Size=XS&Color=Eclipse&Material=Fabric) I keep in case I need to pack some additional things. ([Amazon link](https://amzn.to/4ho5OOG))
+- 1 [Packable Tote](https://www.peakdesign.com/products/packable-tote?Color=Raw) I use for going shopping. ([Amazon link](https://amzn.to/4kREETg))
 
 Now, I wanted to know how many of them would fit in this backpack. Obviously, not all of them, but what is possible?
 
@@ -89,7 +89,7 @@ Unless the airlines change their rules yet again, I think this backpack will be 
 
 ## P.S. Video walkthrough of this backpack by Peak Design
 
-This is not a sponsored post. I'm just a big fan of Peak Design and their video comparing the ZIP 15L and 20L actually convinced me to give this backpack a try:
+This is not a sponsored post, although I will get a ([small commission if you order through Amazon](https://amzn.to/41EWMqC)). I'm just a big fan of Peak Design and their video comparing the ZIP 15L and 20L actually convinced me to give this backpack a try:
 
 {% include video.html id="eUkp4dStSLA" name="Peak Design Everyday Backpack Zip: Setup + Tips" %}
 
