recording studio plus amazon fixes

--- a/en/_posts/2025-03-10-office25.md
+++ b/en/_posts/2025-03-10-office25.md
@@ -53,11 +53,11 @@ With all these things connected to one dock/hub everything runs smoothly. The au
 
 ## Prompter - a teleprompter upgrade I didn't know I needed!
 
-My friend and podcast co-host, [Thomas](https://en.thomasvoland.com), suggested I got small new teleprompter with a screen built-in called [Elgato Prompter](https://www.elgato.com/p/prompter) ([Amazon](https://amzn.to/3R0AM4l)) and this thing blew my mind. Not only is it a better teleprompter than the setup I had before, but it also serves as an additional screen. Amazing.
+My friend and podcast co-host, [Thomas](https://en.thomasvoland.com), suggested I got small new teleprompter with a screen built-in called [Elgato Prompter](https://www.elgato.com/p/prompter) ([Amazon link](https://amzn.to/3R0AM4l)) and this thing blew my mind. Not only is it a better teleprompter than the setup I had before, but it also serves as an additional screen. Amazing.
 
 ![{{ page.title }} prompter](/img/office25-prompter.jpg)
 
-It connects to my Mac Mini using just one USB-C cable (which also powers this thing) and using [DisplayLink](https://en.wikipedia.org/wiki/DisplayLink) it serves as an additional screen for my Mac. It's so light that it can be easily attached to my [Sony ZV-E10](https://amzn.to/3FsSCug) camera and its [Sigma 18mm lens](https://amzn.to/4id1xi3). I have the Sony camera plugged in using a **dummy battery** [like this one](https://amzn.to/4iuCx5y) which is plugged in to a **smart plug-in** [like this one](https://amzn.to/3QStwrd) so I can basically turn on and off my camera using the iPhone or Siri.
+It connects to my Mac Mini using just one USB-C cable (which also powers this thing) and using [DisplayLink](https://en.wikipedia.org/wiki/DisplayLink) it serves as an additional screen for my Mac. It's so light that it can be easily attached to my [Sony ZV-E10](https://electronics.sony.com/imaging/interchangeable-lens-cameras/aps-c/p/ilczve10-b) camera ([Amazon link](https://amzn.to/3FsSCug)) and its [SIGMA 16mm F1.4 lens](https://www.sigmaphoto.com/16mm-f1-4-dc-dn-c) ([Amazon Link](https://amzn.to/4id1xi3)). I have the Sony camera plugged in using a **dummy battery** [like this one](https://amzn.to/4iuCx5y) which is plugged in to a **smart plug-in** [like this one](https://amzn.to/3QStwrd) so I can basically turn on and off my camera using the iPhone or Siri.
 
 ![{{ page.title }} smart](/img/office25-smart.jpg)
 
@@ -88,7 +88,7 @@ Now my desk is clearly divided in two sections:
 
 I've also moved the microphone to the left so it doesn't disturb me when I'm just working, yet it still perfectly gathers audio and can be easily moved to any position desirable.
 
-Below the desk I have cables very neatly organized (red zone) and I've set up lights in such a way that I have all of the office neatly lit up (Ikea smart bulbs - green) and have two [Elgato Key Light](https://www.elgato.com/p/key-light) [Amazon](https://amzn.to/4iuFXFq) lights (in yellow). Here's the view of the back of the desk:
+Below the desk I have cables very neatly organized (red zone) and I've set up lights in such a way that I have all of the office neatly lit up (Ikea smart bulbs - green) and have two [Elgato Key Light](https://www.elgato.com/p/key-light) lights (in yellow - [Amazon link](https://amzn.to/4iuFXFq)). Here's the view of the back of the desk:
 
 ![{{ page.title }} back](/img/office25-back.jpg)
 
