--- a/en/_posts/2025-03-19-studio.md
+++ b/en/_posts/2025-03-19-studio.md
@@ -25,13 +25,13 @@ Mac Mini in my [home office](/office) makes everything effortless: [backups to S
 
 Yes, I could potentially also record podcasts and videos on my iPad if I really wanted to, but it would be much more cumbersome and would require many steps of preparation before each recording session. Now, on to my setup.
 
-## On any day my home office looks like this…
+## My home office looks like this…
 
 We live in a townhouse and my home office is on the third floor. Additionally I have big windows on the right side of me when I work by my desk, so I get lots of daylight which is awesome.
 
 ![{{ page.title }} day](/img/studio-day.jpg)
 
-## Key to a recording studio - control your light!
+## Recording studio - control your light!
 
 Lots of daylight is great, but not when you want to record something and you need a consistent light everywhere. You want to be able to control the light in spite of the time of day. That's why when I want to record, my home office transforms into a cool studio that looks like this:
 
@@ -49,7 +49,7 @@ Here's my detailed setup:
 2. **Elgato Green Screen MT**, which is no longer available for purchase, but today I'd probably buy the new [Elgato Green Screen XL](https://www.elgato.com/us/en/p/green-screen-xl) ([Amazon link](https://amzn.to/41JsLpL)) and put it on the floor instead of installing it on the ceiling.
 3. **IKEA smart bulb** right above me to light up the green screen behind me. It makes sure the green on the green screen is consistent behind me and there's almost no shadow.
 4. **IKEA Blinds** that completely cut off the studio part of my home office so even an early morning rising sun doesn't disturb me while recording.
-5. **[Sony ZV-E10](https://electronics.sony.com/imaging/interchangeable-lens-cameras/aps-c/p/ilczve10-b)** with with [SIGMA 16mm F1.4 lens](https://www.sigmaphoto.com/16mm-f1-4-dc-dn-c) ([Amazon Link](https://amzn.to/4id1xi3)) connected to my Mac using [Elgato Camlink 4K](https://www.elgato.com/us/en/p/cam-link-4k) ([Amazon link](https://amzn.to/4hiier1)).
+5. **[Sony ZV-E10](https://electronics.sony.com/imaging/interchangeable-lens-cameras/aps-c/p/ilczve10-b)** ([Amazon link](https://amzn.to/3FsSCug)) with [SIGMA 16mm F1.4 lens](https://www.sigmaphoto.com/16mm-f1-4-dc-dn-c) ([Amazon Link](https://amzn.to/4id1xi3)) connected to my Mac using [Elgato Camlink 4K](https://www.elgato.com/us/en/p/cam-link-4k) ([Amazon link](https://amzn.to/4hiier1)). On the lens I mounted [Elgato Prompter](https://www.elgato.com/p/prompter) ([Amazon link](https://amzn.to/3R0AM4l)) - my [new favorite office gadget](/office25).
 6. **[Maidesite stand-up desk](https://www.maidesite.com)** where I have 4 presets: (1) sitting, (2) standing, (3) standing and recording, (4) as high as possible as long as my lamps don't hit the ceiling. With my old trusty [Shure MV7+ microphone](https://amzn.to/4bZcXUB) mounted using [RØDE PSA1](https://rode.com/en/accessories/stands-bars/psa1) ([Amazon link](https://amzn.to/4bJpf39)).
 7. **More IKEA smart bulbs** for additional lights, also in the back of the desk and green screen.
 
